--- a/1510/self-directed.yml
+++ b/1510/self-directed.yml
@@ -30,15 +30,15 @@ submissions:
     user-experience:
     performance:
   Brant Wellman:
-    repo:
-    instructor:
-    notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    repo: https://github.com/brantwellman/sunset-tracker
+    instructor: Josh M.
+    notes: Hit all learning goals. Some areas to clean up in controllers. Good use of POROs and Services.
+    completion: 3: Developer completed all the user stories and requirements set by the client.
+    organization: 4: Developer used a project management tool and updated their progress in real-time.
+    test-driven-development: 4: Project shows exceptional use of testing at different layers (above 95% coverage).
+    code-quality: 3: Project demonstrates solid code quality and MVC principles.
+    user-experience: 3: Project exhibits a production-ready user experience.
+    performance: 3: Project pages load on average under 400 milliseconds.
   Brenna Martenson:
     repo:
     instructor:
