--- a/1510/self-directed.yml
+++ b/1510/self-directed.yml
@@ -72,13 +72,13 @@ submissions:
   David Stinnette:
     repo: https://github.com/dastinnette/politweets
     instructor: Josh M.
-    notes:
-    completion:
-    organization:
-    test-driven-development:
-    code-quality:
-    user-experience:
-    performance:
+    notes: Good attempts at separating logic into POROs. Could use more objects and separation from the Tweet model. Good use of caching and performance for large sets of data coming from data.
+    completion: 4: Developer completed all the user stories and requirements set by the client in timely manner.
+    organization: 4: Developer used a project management tool and updated their progress in real-time.
+    test-driven-development: 4: Project shows exceptional use of testing at different layers (above 95% coverage).
+    code-quality: 3: Project demonstrates solid code quality and MVC principles.
+    user-experience: 3: Project exhibits a production-ready user experience.
+    performance: 4: Project pages load on average under 300 milliseconds.
   Edgar Duran:
     repo:
     instructor:
@@ -198,7 +198,7 @@ submissions:
     code-quality: 3: Project demonstrates solid code quality and MVC principles.
     user-experience: 3: Project exhibits a production-ready user experience.
     performance: 3: Project pages load on average under 400 milliseconds.
-  Toni Rib: 
+  Toni Rib:
     repo: https: https://github.com/tonirib/run_hacker
     instructor: Tess
     notes: Solid project. Took on a lot of interesting challenges.
