--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -1,65 +1,45 @@
 submisssions:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
   Name:
     github repo link:
-    url:
-  Name: 
+
+Status
