--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -1,55 +1,47 @@
 submisssions:
-  Name:
+  Name: Alireza Andersen
     github repo link:
-  Name:
+  Name: Andrew Thompson
     github repo link:
-  Name:
+  Name: Ashwin Rao
     github repo link:
-  Name:
+  Name: Christopher Soden
     github repo link:
-  Name:
+  Name: Claudia Kiesenhofer
     github repo link:
-  Name:
+  Name: Deborah Hamel
     github repo link:
-  Name:
+  Name: Gurusundesh Khalsa
     github repo link:
-  Name:
+  Name: Hedy Woo
     github repo link:
-  Name:
+  Name: Jared Roth
     github repo link:
-  Name:
+  Name: Jeneve Parrish
     github repo link:
-  Name:
+  Name: Jonathan Bernesser
     github repo link:
-  Name:
+  Name: Jonathan Liss
     github repo link:
-  Name:
+  Name: Joshua Washke
     github repo link:
-  Name:
+  Name: Kami Boers
     github repo link:
-  Name:
+  Name: Kris Foss
     github repo link:
-  Name:
+  Name: Ling Tran
     github repo link:
-  Name:
+  Name: Marina Corona
     github repo link:
-  Name:
+  Name: Mark Miranda
     github repo link:
-  Name:
+  Name: Matt DesMarteau
     github repo link:
-  Name:
+  Name: Matt Pindell
     github repo link:
-  Name:
+  Name: Patrick Hardy
     github repo link:
-  Name:
+  Name: Sal Espinosa
     github repo link:
-  Name:
-    github repo link:
-  Name:
-    github repo link:
-  Name:
-    github repo link:
-  Name:
-    github repo link:
-  Name:
+  Name: Thomas Pickett
     github repo link:
