--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -1,65 +1,70 @@
 submisssions:
-  Name:
+  Name: Alireza Andersen
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Andrew Thompson
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Ashwin Rao
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Christopher Soden
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Claudia Kiesenhofer
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Deborah Hamel
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Gurusundesh Khalsa
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Hedy Woo
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Jared Roth
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Jeneve Parrish
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Jonathan Bernesser
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Jonathan Liss
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Joshua Washke
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Kami Boers
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Kris Foss
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Ling Tran
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Marina Corona
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Mark Miranda
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Matt DesMarteau
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Matt Pindell
     github repo link:
-    url:
-  Name:
+      url:
+  Name: Patrick Hardy
     github repo link:
-    url:
-  Name: 
+      url:
+  Name: Sal Espinosa
+    github repo link:
+      url:
+  Name: Thomas Pickett
+    github repo link:
+      url:
