--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -6,7 +6,7 @@ submisssions:
   Name: Ashwin Rao
     github repo link:
   Name: Christopher Soden
-    github repo link:[GitHub URL](git@github.com:seeker105/webguesser.git)
+    github repo link:(https://github.com/seeker105/webguesser.git)
   Name: Claudia Kiesenhofer
     github repo link:
   Name: Deborah Hamel
