--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -8,7 +8,7 @@ submisssions:
   Name: Christopher Soden
     github repo link:
   Name: Claudia Kiesenhofer
-    github repo link:
+    github repo link: https://github.com/Claudia108/web_guesser
   Name: Deborah Hamel
     github repo link:
   Name: Gurusundesh Khalsa
