--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -30,7 +30,7 @@ submisssions:
   Name: Kris Foss
     github repo link:
   Name: Ling Tran
-    github repo link:
+    github repo link: https://github.com/lingtran/web_guesser/
   Name: Marina Corona
     github repo link:
   Name: Mark Miranda
