--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -14,7 +14,7 @@ submisssions:
   Name: Gurusundesh Khalsa
     github repo link:
   Name: Hedy Woo
-    github repo link:
+    github repo link:git@github.com:thePaulista/web_guesser.git
   Name: Jared Roth
     github repo link:
   Name: Jeneve Parrish
