Provide link to Sal's submission.

--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -42,6 +42,6 @@ submisssions:
   Name: Patrick Hardy
     github repo link:
   Name: Sal Espinosa
-    github repo link:
+    github repo link: https://github.com/s-espinosa/web_guesser
   Name: Thomas Pickett
     github repo link:
