--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -42,6 +42,6 @@ submisssions:
   Name: Patrick Hardy
     github repo link:
   Name: Sal Espinosa
-    github repo link:
+    github repo link: https://github.com/s-espinosa/task_manager
   Name: Thomas Pickett
     github repo link:
