--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -16,7 +16,7 @@ submisssions:
   Name: Hedy Woo
     github repo link:
   Name: Jared Roth
-    github repo link:
+    github repo link: https://github.com/JaredRoth/web_guesser
   Name: Jeneve Parrish
     github repo link:
   Name: Jonathan Bernesser
