--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -20,7 +20,7 @@ submisssions:
   Name: Jeneve Parrish
     github repo link:
   Name: Jonathan Bernesser
-    github repo link:
+    github repo link: https://github.com/Jbern16/web_guesser
   Name: Jonathan Liss
     github repo link:
   Name: Joshua Washke
