--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -1,6 +1,6 @@
 submisssions:
   Name: Alireza Andersen
-    github repo link:
+    github repo link: https://github.com/alirezaandersen/web_guesser.git
   Name: Andrew Thompson
     github repo link:
   Name: Ashwin Rao
