added link for web guesser repo

--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -22,7 +22,7 @@ submisssions:
   Name: Jonathan Bernesser
     github repo link:
   Name: Jonathan Liss
-    github repo link:
+    github repo link: https://github.com/jdliss/web_guesser
   Name: Joshua Washke
     github repo link:
   Name: Kami Boers
