--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -44,4 +44,4 @@ submisssions:
   Name: Sal Espinosa
     github repo link:
   Name: Thomas Pickett
-    github repo link:
+    github repo link: https://github.com/thompickett/web_guesser
