--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -12,7 +12,7 @@ submisssions:
   Name: Deborah Hamel
     github repo link:
   Name: Gurusundesh Khalsa
-    github repo link:
+    github repo link: https://github.com/GKhalsa/web_guesser
   Name: Hedy Woo
     github repo link:
   Name: Jared Roth
