link added for web guesser repo

--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -4,7 +4,7 @@ submisssions:
   Name: Andrew Thompson
     github repo link:
   Name: Ashwin Rao
-    github repo link:
+    github repo link: https://github.com/theonlyrao/web_guesser
   Name: Christopher Soden
     github repo link:
   Name: Claudia Kiesenhofer
