--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -34,7 +34,7 @@ submisssions:
   Name: Marina Corona
     github repo link:
   Name: Mark Miranda
-    github repo link:
+    github repo link: https://github.com/notmarkmiranda/web_guesser
   Name: Matt DesMarteau
     github repo link:
   Name: Matt Pindell
