Mark Miranda's Link

--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -34,7 +34,7 @@ submisssions:
   Name: Marina Corona
     github repo link:
   Name: Mark Miranda
-    github repo link:
+    github repo link: https://github.com/notmarkmiranda/task_manager
   Name: Matt DesMarteau
     github repo link:
   Name: Matt Pindell
