--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -40,7 +40,7 @@ submisssions:
   Name: Matt Pindell
     github repo link:
   Name: Patrick Hardy
-    github repo link:
+    github repo link: https://github.com/patrickwhardy/web_guesser
   Name: Sal Espinosa
     github repo link:
   Name: Thomas Pickett
