--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -18,7 +18,7 @@ submisssions:
   Name: Jared Roth
     github repo link:
   Name: Jeneve Parrish
-    github repo link:
+    github repo link: https://github.com/jeneve/web_guesser
   Name: Jonathan Bernesser
     github repo link:
   Name: Jonathan Liss
