--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -51,8 +51,8 @@ submisssions:
     github repo link:
       url:
   Name: Mark Miranda
-    github repo link:
-      url:
+    github repo link: https://github.com/notmarkmiranda/notmarkmiranda.github.io
+      url: http://notmarkmiranda.github.io/
   Name: Matt DesMarteau
     github repo link:
       url:
