--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -10,7 +10,7 @@ submisssions:
   Name: Claudia Kiesenhofer
     github repo link:
   Name: Deborah Hamel
-    github repo link:
+    github repo link: https://github.com/deborahleehamel/web_guesser
   Name: Gurusundesh Khalsa
     github repo link:
   Name: Hedy Woo
