Added link to Matt Pindell's Blog

--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -58,7 +58,7 @@ submisssions:
       url:
   Name: Matt Pindell
     github repo link:
-      url:
+      url: https://pindell-matt.github.io/
   Name: Patrick Hardy
     github repo link:
       url:
