Added URLs for blog
Inserted URL for the github repo of the blog assignment. Added a URL to run the site live, hosted on GitHub.

--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -9,8 +9,8 @@ submisssions:
     github repo link:
       url:
   Name: Christopher Soden
-    github repo link:
-      url:
+    github repo link: https://github.com/seeker105/blog
+      url: http://seeker105.github.io/blog/
   Name: Claudia Kiesenhofer
     github repo link:
       url:
