--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -32,7 +32,7 @@ submisssions:
   Name: Ling Tran
     github repo link: https://github.com/lingtran/web_guesser/
   Name: Marina Corona
-    github repo link:
+    github repo link: https://github.com/marinacor1/web_guesser
   Name: Mark Miranda
     github repo link: https://github.com/notmarkmiranda/web_guesser
   Name: Matt DesMarteau
