--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -28,7 +28,7 @@ submisssions:
   Name: Kami Boers
     github repo link:
   Name: Kris Foss
-    github repo link:
+    github repo link: https://github.com/kristindiannefoss/web_guesser
   Name: Ling Tran
     github repo link: https://github.com/lingtran/web_guesser/
   Name: Marina Corona
