--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -26,7 +26,7 @@ submisssions:
   Name: Joshua Washke
     github repo link:
   Name: Kami Boers
-    github repo link:
+    github repo link: https://github.com/kamiboers/web_guesser
   Name: Kris Foss
     github repo link: https://github.com/kristindiannefoss/web_guesser
   Name: Ling Tran
