--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -21,8 +21,8 @@ submisssions:
     github repo link:
       url:
   Name: Hedy Woo
-    github repo link:
-      url:
+    github repo link:https://github.com/thePaulista
+      url: http://thepaulista.github.io/
   Name: Jared Roth
     github repo link:
       url:
