--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -30,8 +30,8 @@ submisssions:
     github repo link:
       url:
   Name: Jonathan Bernesser
-    github repo link:
-      url:
+    github repo link: https://github.com/Jbern16/jbern16.github.io
+      url: https://jbern16.github.io/
   Name: Jonathan Liss
     github repo link:
       url:
