Add links for Drew Thompson's blog and repo

--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -3,8 +3,8 @@ submisssions:
     github repo link: https://github.com/alirezaandersen/alirezaandersen.github.io.git
       url: http://alirezaandersen.github.io/
   Name: Andrew Thompson
-    github repo link:
-      url:
+    github repo link: https://github.com/drew-t/drew-t.github.io
+      url: http://drew-t.github.io/
   Name: Ashwin Rao
     github repo link:
       url:
