added to github.io...
disregard my previous request. here's the real deal.

--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -27,8 +27,8 @@ submisssions:
     github repo link:
       url:
   Name: Jeneve Parrish
-    github repo link:
-      url:
+    github repo link:https://github.com/jeneve/jeneve.github.io
+      url:https://jeneve.github.io/
   Name: Jonathan Bernesser
     github repo link: https://github.com/Jbern16/jbern16.github.io
       url: https://jbern16.github.io/
