--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -20,7 +20,7 @@ submisssions:
   Name: Jeneve Parrish
     github repo link:
   Name: Jonathan Bernesser
-    github repo link:
+    github repo link: https://github.com/Jbern16/task_manager
   Name: Jonathan Liss
     github repo link:
   Name: Joshua Washke
