--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -60,8 +60,8 @@ submisssions:
     github repo link:
       url: https://pindell-matt.github.io/
   Name: Patrick Hardy
-    github repo link:
-      url:
+    github repo link:https://github.com/patrickwhardy/patrickwhardy.github.io
+      url:http://patrickwhardy.github.io/
   Name: Sal Espinosa
     github repo link: https://github.com/s-espinosa/s-espinosa.github.io
       url: http://s-espinosa.github.io/
