--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -66,5 +66,5 @@ submisssions:
     github repo link: https://github.com/s-espinosa/s-espinosa.github.io
       url: http://s-espinosa.github.io/
   Name: Thomas Pickett
-    github repo link:
-      url:
+    github repo link: https://github.com/thompickett/thompickett.github.io
+      url: https://thompickett.github.io
