--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -42,8 +42,8 @@ submisssions:
     github repo link:
       url:
   Name: Kris Foss
-    github repo link:
-      url:
+    github repo link: https://github.com/kristindiannefoss/kristindiannefoss.github.io
+      url: http://kristindiannefoss.github.io/
   Name: Ling Tran
     github repo link:
       url:
