added personal site

--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -33,8 +33,8 @@ submisssions:
     github repo link:
       url:
   Name: Jonathan Liss
-    github repo link:
-      url:
+    github repo link: https://github.com/jdliss/jdliss.github.io
+      url: http://jdliss.github.io/
   Name: Joshua Washke
     github repo link:
       url:
