Deb Hamel - personal site

--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -15,8 +15,8 @@ submisssions:
     github repo link:
       url:
   Name: Deborah Hamel
-    github repo link:
-      url:
+    github repo link: https://github.com/deborahleehamel/deborahleehamel.github.io
+      url: http://deborahleehamel.github.io/
   Name: Gurusundesh Khalsa
     github repo link:
       url:
