added link to repo for Joshua Washke

--- a/1602/module_2_prep/web_guesser.yml
+++ b/1602/module_2_prep/web_guesser.yml
@@ -24,7 +24,7 @@ submisssions:
   Name: Jonathan Liss
     github repo link: https://github.com/jdliss/web_guesser
   Name: Joshua Washke
-    github repo link:
+    github repo link: https://github.com/jwashke/web_guesser
   Name: Kami Boers
     github repo link: https://github.com/kamiboers/web_guesser
   Name: Kris Foss
