--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -12,8 +12,8 @@ submisssions:
     github repo link: https://github.com/seeker105/blog
       url: http://seeker105.github.io/blog/
   Name: Claudia Kiesenhofer
-    github repo link:
-      url:
+    github repo link: https://github.com/Claudia108/github.io
+      url: http://claudia108.github.io/
   Name: Deborah Hamel
     github repo link:
       url:
