adding website files

--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -48,7 +48,7 @@ submisssions:
     github repo link:
       url:
   Name: Marina Corona
-    github repo link:
+    github repo link: https://github.com/marinacor1/simple_website
       url:
   Name: Mark Miranda
     github repo link: https://github.com/notmarkmiranda/notmarkmiranda.github.io
