--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -39,8 +39,8 @@ submisssions:
     github repo link:
       url:
   Name: Kami Boers
-    github repo link:
-      url:
+    github repo link: https://github.com/kamiboers/kamiboers.github.io/
+      url: https://kamiboers.github.io/
   Name: Kris Foss
     github repo link:
       url:
