--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -45,8 +45,8 @@ submisssions:
     github repo link:
       url:
   Name: Ling Tran
-    github repo link:
-      url:
+    github repo link: https://github.com/lingtran/lingtran.github.io
+      url: http://lingtran.github.io/
   Name: Marina Corona
     github repo link:
       url:
