--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -44,4 +44,4 @@ submisssions:
   Name: Sal Espinosa
     github repo link: https://github.com/s-espinosa/task_manager
   Name: Thomas Pickett
-    github repo link:
+    github repo link: https://github.com/thompickett/task_manager
