added Matt Pindell's Task Manager Repo Link

--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -38,7 +38,7 @@ submisssions:
   Name: Matt DesMarteau
     github repo link:
   Name: Matt Pindell
-    github repo link:
+    github repo link: https://github.com/pindell-matt/task-manager
   Name: Patrick Hardy
     github repo link:
   Name: Sal Espinosa
