--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -40,7 +40,7 @@ submisssions:
   Name: Matt Pindell
     github repo link:
   Name: Patrick Hardy
-    github repo link:
+    github repo link: https://github.com/patrickwhardy/task_manager.git
   Name: Sal Espinosa
     github repo link: https://github.com/s-espinosa/task_manager
   Name: Thomas Pickett
