--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -8,7 +8,7 @@ submisssions:
   Name: Christopher Soden
     github repo link:
   Name: Claudia Kiesenhofer
-    github repo link:
+    github repo link: https://github.com/Claudia108/task_manager
   Name: Deborah Hamel
     github repo link:
   Name: Gurusundesh Khalsa
