--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -28,7 +28,7 @@ submisssions:
   Name: Kami Boers
     github repo link:
   Name: Kris Foss
-    github repo link:
+    github repo link: https://github.com/kristindiannefoss/task_manager
   Name: Ling Tran
     github repo link:
   Name: Marina Corona
