--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -36,8 +36,8 @@ submisssions:
     github repo link: https://github.com/jdliss/jdliss.github.io
       url: http://jdliss.github.io/
   Name: Joshua Washke
-    github repo link:
-      url:
+    github repo link: https://github.com/jwashke/jwashke.github.io
+      url: http://www.joshuawashke.me
   Name: Kami Boers
     github repo link: https://github.com/kamiboers/kamiboers.github.io/
       url: https://kamiboers.github.io/
