--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -18,8 +18,8 @@ submisssions:
     github repo link: https://github.com/deborahleehamel/deborahleehamel.github.io
       url: http://deborahleehamel.github.io/
   Name: Gurusundesh Khalsa
-    github repo link:
-      url:
+    github repo link: https://github.com/GKhalsa/gkhalsa.github.io
+      url: http://gkhalsa.github.io/
   Name: Hedy Woo
     github repo link:https://github.com/thePaulista
       url: http://thepaulista.github.io/
