--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -30,7 +30,7 @@ submisssions:
   Name: Kris Foss
     github repo link:
   Name: Ling Tran
-    github repo link:
+    github repo link: https://github.com/lingtran/task_manager
   Name: Marina Corona
     github repo link: https://github.com/marinacor1/task_manager
   Name: Mark Miranda
