--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -10,7 +10,7 @@ submisssions:
   Name: Claudia Kiesenhofer
     github repo link:
   Name: Deborah Hamel
-    github repo link:
+    github repo link: https://github.com/deborahleehamel/task_manager
   Name: Gurusundesh Khalsa
     github repo link: https://github.com/GKhalsa/task_manager
   Name: Hedy Woo
