--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -4,7 +4,7 @@ submisssions:
   Name: Andrew Thompson
     github repo link:
   Name: Ashwin Rao
-    github repo link:
+    github repo link: https://github.com/theonlyrao/2module/tree/master/task_manager
   Name: Christopher Soden
     github repo link:
   Name: Claudia Kiesenhofer
