--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -2,7 +2,7 @@ submisssions:
   Name: Alireza Andersen
     github repo link: https://github.com/alirezaandersen/task_manager.git
   Name: Andrew Thompson
-    github repo link:
+    github repo link: https://github.com/drew-t/task_manager
   Name: Ashwin Rao
     github repo link:
   Name: Christopher Soden
