--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -24,7 +24,7 @@ submisssions:
   Name: Jonathan Liss
     github repo link:
   Name: Joshua Washke
-    github repo link:
+    github repo link: https://github.com/jwashke/task_manager
   Name: Kami Boers
     github repo link:
   Name: Kris Foss
