--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -6,7 +6,7 @@ submisssions:
   Name: Ashwin Rao
     github repo link:
   Name: Christopher Soden
-    github repo link:
+    github repo link: https://github.com/seeker105/task_manager
   Name: Claudia Kiesenhofer
     github repo link:
   Name: Deborah Hamel
