Add Jared Roth's Blog
Just noticed that I somehow screwed up the previous pull request for this and don't see it here, open or closed. So here it is again.
I did not bother with any customization beyond content because I have been out of town this week and felt like that was the safest area to cut back on some time.
I do plan on customizing it over time.

--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -24,8 +24,8 @@ submisssions:
     github repo link:https://github.com/thePaulista
       url: http://thepaulista.github.io/
   Name: Jared Roth
-    github repo link:
-      url:
+    github repo link: https://github.com/JaredRoth/jaredroth.github.io
+      url: jaredroth.github.io
   Name: Jeneve Parrish
     github repo link:https://github.com/jeneve/jeneve.github.io
       url:https://jeneve.github.io/
