--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -22,7 +22,7 @@ submisssions:
   Name: Jonathan Bernesser
     github repo link:
   Name: Jonathan Liss
-    github repo link:
+    github repo link: https://github.com/jdliss/task_manager
   Name: Joshua Washke
     github repo link:
   Name: Kami Boers
