--- a/1602/module_2_prep/task_manager.yml
+++ b/1602/module_2_prep/task_manager.yml
@@ -26,7 +26,7 @@ submisssions:
   Name: Joshua Washke
     github repo link:
   Name: Kami Boers
-    github repo link:
+    github repo link: https://github.com/kamiboers/task_manager
   Name: Kris Foss
     github repo link:
   Name: Ling Tran
