--- a/1602/module_2_prep/personal_site_html_css.yml
+++ b/1602/module_2_prep/personal_site_html_css.yml
@@ -48,8 +48,8 @@ submisssions:
     github repo link: https://github.com/lingtran/lingtran.github.io
       url: http://lingtran.github.io/
   Name: Marina Corona
-    github repo link: https://github.com/marinacor1/simple_website
-      url:
+    github repo link: https://github.com/marinacor1/marinacor1.github.io
+      url: http://marinacor1.github.io
   Name: Mark Miranda
     github repo link: https://github.com/notmarkmiranda/notmarkmiranda.github.io
       url: http://notmarkmiranda.github.io/
