--- a/1602/sinatra_crud.yml
+++ b/1602/sinatra_crud.yml
@@ -20,7 +20,7 @@ submisssions:
   Name: Jeneve Parrish
     github repo link: 
   Name: Jonathan Bernesser
-    github repo link: 
+    github repo link: https://github.com/Jbern16/robot_world
   Name: Jonathan Liss
     github repo link: 
   Name: Joshua Washke
