--- a/1602/sinatra_crud.yml
+++ b/1602/sinatra_crud.yml
@@ -28,7 +28,7 @@ submisssions:
   Name: Kami Boers
     github repo link: 
   Name: Kris Foss
-    github repo link: 
+    github repo link: https://github.com/kristindiannefoss/skill-inventory-crud
   Name: Ling Tran
     github repo link: 
   Name: Marina Corona
