Add links for Drew Thompson's robot world

--- a/1602/sinatra_crud.yml
+++ b/1602/sinatra_crud.yml
@@ -2,7 +2,7 @@ submisssions:
   Name: Alireza Andersen
     github repo link: 
   Name: Andrew Thompson
-    github repo link: 
+    github repo link: https://github.com/drew-t/robot_world
   Name: Ashwin Rao
     github repo link: 
   Name: Christopher Soden
