--- a/1602/sinatra_crud.yml
+++ b/1602/sinatra_crud.yml
@@ -18,7 +18,7 @@ submisssions:
   Name: Jared Roth
     github repo link:
   Name: Jeneve Parrish
-    github repo link:
+    github repo link: https://github.com/jeneve/robots
   Name: Jonathan Bernesser
     github repo link:
   Name: Jonathan Liss
