--- a/1602/sinatra_crud.yml
+++ b/1602/sinatra_crud.yml
@@ -14,7 +14,7 @@ submisssions:
   Name: Gurusundesh Khalsa
     github repo link:
   Name: Hedy Woo
-    github repo link:
+    github repo link: https://github.com/thePaulista/mr_roboto
   Name: Jared Roth
     github repo link:
   Name: Jeneve Parrish
