--- a/1602/sinatra_crud.yml
+++ b/1602/sinatra_crud.yml
@@ -6,7 +6,7 @@ submisssions:
   Name: Ashwin Rao
     github repo link:
   Name: Christopher Soden
-    github repo link:
+    github repo link: git@github.com:seeker105/skill_inventory_2.git
   Name: Claudia Kiesenhofer
     github repo link:
   Name: Deborah Hamel
