--- a/1602/sinatra_crud.yml
+++ b/1602/sinatra_crud.yml
@@ -12,7 +12,7 @@ submisssions:
   Name: Deborah Hamel
     github repo link:
   Name: Gurusundesh Khalsa
-    github repo link:
+    github repo link: https://github.com/GKhalsa/robot_world
   Name: Hedy Woo
     github repo link:
   Name: Jared Roth
