--- a/1602/sinatra_crud.yml
+++ b/1602/sinatra_crud.yml
@@ -16,7 +16,7 @@ submisssions:
   Name: Hedy Woo
     github repo link:
   Name: Jared Roth
-    github repo link:
+    github repo link: https://github.com/JaredRoth/robot_world
   Name: Jeneve Parrish
     github repo link:
   Name: Jonathan Bernesser
