--- a/1602/sinatra_crud.yml
+++ b/1602/sinatra_crud.yml
@@ -10,7 +10,7 @@ submisssions:
   Name: Claudia Kiesenhofer
     github repo link:
   Name: Deborah Hamel
-    github repo link:
+    github repo link: https://github.com/deborahleehamel/robot_world
   Name: Gurusundesh Khalsa
     github repo link:
   Name: Hedy Woo
