--- a/1602/sinatra_crud.yml
+++ b/1602/sinatra_crud.yml
@@ -30,7 +30,7 @@ submisssions:
   Name: Kris Foss
     github repo link:
   Name: Ling Tran
-    github repo link:
+    github repo link: https://github.com/lingtran/robot_world
   Name: Marina Corona
     github repo link:
   Name: Mark Miranda
