--- a/1602/sinatra_crud.yml
+++ b/1602/sinatra_crud.yml
@@ -40,7 +40,7 @@ submisssions:
   Name: Matt Pindell
     github repo link: https://github.com/pindell-matt/robot-world
   Name: Patrick Hardy
-    github repo link:
+    github repo link: https://github.com/patrickwhardy/robot_world
   Name: Sal Espinosa
     github repo link: https://github.com/s-espinosa/robot_world
   Name: Thomas Pickett
