--- a/1602/sinatra_crud.yml
+++ b/1602/sinatra_crud.yml
@@ -26,7 +26,7 @@ submisssions:
   Name: Joshua Washke
     github repo link: https://github.com/jwashke/robot_world
   Name: Kami Boers
-    github repo link:
+    github repo link: https://github.com/kamiboers/robot_world
   Name: Kris Foss
     github repo link:
   Name: Ling Tran
