--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -9,11 +9,11 @@ submisssions:
       checkpoint 1 sha:
       checkpoint 2 sha:
       checkpoint 3 sha:
-  Name: Ashwin Rao
-    github repo link:
-      checkpoint 1 sha:
-      checkpoint 2 sha:
-      checkpoint 3 sha:
+  Name: Ashwin Rao 
+    github repo link: https://github.com/theonlyrao/mix_master
+      checkpoint 1 sha: 7ce429495e82fd4aa5c0a132db645795488c4ca5
+      checkpoint 2 sha: 6cdc2e450d17a17e172ccc9de70132f573eea9c6
+      checkpoint 3 sha: 51cf5c44566f432e904bbacf4716fe9d7245f0e4
   Name: Christopher Soden
     github repo link:
       checkpoint 1 sha:
