--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -50,10 +50,10 @@ submisssions:
       checkpoint 2 sha:
       checkpoint 3 sha:
   Name: Jonathan Bernesser
-    github repo link
-      checkpoint 1 sha:
-      checkpoint 2 sha:
-      checkpoint 3 sha:
+    github repo link: https://github.com/Jbern16/mix_master
+      checkpoint 1 sha: 5f0520c86563fa336b508d74ef513f42efb8ad7b
+      checkpoint 2 sha: 66f28cd4bf2740f6bf2f250417dfe4119727ea4c
+      checkpoint 3 sha: 328b2bfa279ebc4c103ecc92d48f3484413505fb
   Name: Jonathan Liss
     github repo link:
       checkpoint 1 sha:
