Add repo link for Drew Thompson

--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -5,7 +5,7 @@ submisssions:
       checkpoint 2 sha:
       checkpoint 3 sha:
   Name: Andrew Thompson
-    github repo link:
+    github repo link: https://github.com/drew-t/mix_master
       checkpoint 1 sha:
       checkpoint 2 sha:
       checkpoint 3 sha:
