Add Ling Tran Mix Master repo link
At this time, submitting all iterations except for optional iteration 3 and iteration 7. 

Problem encountered: I have different branches on my remote machine, but they are not reflected in my Github repo. Is this because I never went to my Github to make a PR?

--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -75,7 +75,7 @@ submisssions:
       checkpoint 2 sha:
       checkpoint 3 sha:
   Name: Ling Tran
-    github repo link:
+    github repo link: https://github.com/lingtran/mix_master.git
       checkpoint 1 sha:
       checkpoint 2 sha:
       checkpoint 3 sha:
