Include link to my repo
Had to use life raft, did some of the "now you try", not the best thing I've produced but a good learning experience.

--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -70,7 +70,7 @@ submisssions:
       checkpoint 2 sha:
       checkpoint 3 sha:
   Name: Kris Foss
-    github repo link
+    github repo link: git@github.com:kristindiannefoss/mix_master.git
       checkpoint 1 sha:
       checkpoint 2 sha:
       checkpoint 3 sha:
