--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -85,7 +85,7 @@ submisssions:
       checkpoint 2 sha:
       checkpoint 3 sha:
   Name: Mark Miranda
-    github repo link:
+    github repo link: https://github.com/notmarkmiranda/mix_master
       checkpoint 1 sha:
       checkpoint 2 sha:
       checkpoint 3 sha:
