--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -35,7 +35,7 @@ submisssions:
       checkpoint 2 sha:
       checkpoint 3 sha:
   Name: Hedy Woo
-    github repo link:
+    github repo link: https://github.com/thePaulista/rails_mix_master.git
       checkpoint 1 sha:
       checkpoint 2 sha:
       checkpoint 3 sha:
