Add Sal's mix-master repo

--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -100,7 +100,7 @@ submisssions:
       checkpoint 2 sha:
       checkpoint 3 sha:
   Name: Sal Espinosa
-    github repo link:
+    github repo link: https://github.com/s-espinosa/mix_master
       checkpoint 1 sha:
       checkpoint 2 sha:
       checkpoint 3 sha:
