--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -1,6 +1,6 @@
 submisssions:
   Name: Alireza Andersen
-    github repo link:
+    github repo link: https://github.com/alirezaandersen/mix_master.git
       checkpoint 1 sha:
       checkpoint 2 sha:
       checkpoint 3 sha:
