--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -45,7 +45,7 @@ submisssions:
       checkpoint 2 sha:
       checkpoint 3 sha:
   Name: Jeneve Parrish
-    github repo link:
+    github repo link: https://github.com/jeneve/mix_master.git
       checkpoint 1 sha:
       checkpoint 2 sha:
       checkpoint 3 sha:
