added a repo link

--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -15,7 +15,7 @@ submisssions:
       checkpoint 2 sha:
       checkpoint 3 sha:
   Name: Christopher Soden
-    github repo link:
+    github repo link: git@github.com:seeker105/mix_master.git
       checkpoint 1 sha:
       checkpoint 2 sha:
       checkpoint 3 sha:
