--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -65,7 +65,7 @@ submisssions:
       checkpoint 2 sha:
       checkpoint 3 sha:
   Name: Kami Boers
-    github repo link:
+    github repo link: https://github.com/kamiboers/mix_master
       checkpoint 1 sha:
       checkpoint 2 sha:
       checkpoint 3 sha:
