Jared Roth's Mix Master Link
Not actually using checkpoints as far as I understand... so no shas to see here.

--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -40,7 +40,7 @@ submisssions:
       checkpoint 2 sha:
       checkpoint 3 sha:
   Name: Jared Roth
-    github repo link:
+    github repo link: https://github.com/JaredRoth/mix_master
       checkpoint 1 sha:
       checkpoint 2 sha:
       checkpoint 3 sha:
