Deb Hamel - added mix_master repo link

--- a/1602/mix_master.yml
+++ b/1602/mix_master.yml
@@ -25,7 +25,7 @@ submisssions:
       checkpoint 2 sha:
       checkpoint 3 sha:
   Name: Deborah Hamel
-    github repo link:
+    github repo link: https://github.com/deborahleehamel/mix_master
       checkpoint 1 sha:
       checkpoint 2 sha:
       checkpoint 3 sha:
